Fix butterfly scroll overflow

--- a/_sass/05_objects/main.scss
+++ b/_sass/05_objects/main.scss
@@ -1,4 +1,4 @@
-$content-width: 1100px;
+$content-width: 1000px;
 
 .o-main {
   max-width: $content-width;
